--- a/src/Numerogeek/BlogBundle/Resources/views/Admin/Category/edit.html.twig
+++ b/src/Numerogeek/BlogBundle/Resources/views/Admin/Category/edit.html.twig
@@ -8,7 +8,7 @@
         <ul class="record_actions">
     <li>
         <a href="{{ path('category') }}">
-            Back to the list
+            {{ "blog.category.button.back"|trans }}
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
