--- a/src/Numerogeek/BlogBundle/Resources/views/Admin/Category/new.html.twig
+++ b/src/Numerogeek/BlogBundle/Resources/views/Admin/Category/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AdminBundle::layout.html.twig' %}
 
 {% block title %}
-    Blog > Créer une catégorie
+    Blog > {{ "blog.category.title.create"|trans }}
 {% endblock%}
 {% block page_title %}
     Blog
@@ -14,7 +14,7 @@
 
             <div class="box box-primary">
                 <div class="box-header">
-                    <h3 class="box-title">Créer une catégorie</h3>
+                    <h3 class="box-title">{{ "blog.category.title.create"|trans }}</h3>
                 </div>
                 {{ form_start(form) }}
                 <div class="box-body">
@@ -23,9 +23,9 @@
                 <div class="box-footer clearfix">
 
                     <button type="reset" class="btn btn-warning pull-left margin"><i class="fa fa-times"></i> Reset</button>
-                    <a class="btn btn-warning margin" href="{{ path('blog_admin_post') }}">Retour à la liste</a>
+                    <a class="btn btn-warning margin" href="{{ path('blog_admin_post') }}">{{ "blog.category.button.back"|trans }}</a>
 
-                    <button type="submit" class="btn btn-primary pull-right margin"><i class="fa fa-check-square"></i> Créer</button>
+                    <button type="submit" class="btn btn-primary pull-right margin"><i class="fa fa-check-square"></i> {{ "blog.category.button.create"|trans }}</button>
                 </div>
                 {{ form_end(form) }}
             </div>
