--- a/src/Numerogeek/BlogBundle/Resources/views/Admin/Post/edit.html.twig
+++ b/src/Numerogeek/BlogBundle/Resources/views/Admin/Post/edit.html.twig
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-    Blog > Mettre à jour l'article
+    Blog > {{ 'blog.article.title.edit' |trans }}
 {% endblock%}
 {% block page_title %}
     Blog
@@ -16,7 +16,7 @@
 
             <div class="box box-primary">
                 <div class="box-header">
-                    <h3 class="box-title">Mettre à jour l'article</h3>
+                    <h3 class="box-title">{{ 'blog.article.title.edit' |trans }}</h3>
                 </div>
                 {{ form_start(form) }}
                 <div class="box-body">
@@ -24,9 +24,9 @@
                 </div>
                 <div class="box-footer clearfix">
 
-                    <a class="btn btn-warning margin" href="{{ path('blog_admin_post') }}">Retour à la liste</a>
+                    <a class="btn btn-warning margin" href="{{ path('blog_admin_post') }}">{{ 'blog.article.button.back' |trans }}</a>
 
-                    <button type="submit" class="btn btn-primary pull-right margin"><i class="fa fa-check-square"></i> Mettre à jour</button>
+                    <button type="submit" class="btn btn-primary pull-right margin"><i class="fa fa-check-square"></i> {{ 'blog.article.button.update' |trans }}</button>
                 </div>
                 {{ form_end(form) }}
             </div>
