--- a/src/Numerogeek/BlogBundle/Resources/views/Admin/Post/new.html.twig
+++ b/src/Numerogeek/BlogBundle/Resources/views/Admin/Post/new.html.twig
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-    Blog > Créer un article
+    Blog > {{ 'blog.article.title.create' | trans }}
 {% endblock%}
 {% block page_title %}
     Blog
@@ -16,7 +16,7 @@
 
         <div class="box box-primary">
             <div class="box-header">
-                <h3 class="box-title">Créer un article</h3>
+                <h3 class="box-title">{{ 'blog.article.title.create' | trans }}</h3>
             </div>
             {{ form_start(form) }}
             <div class="box-body">
@@ -24,10 +24,10 @@
             </div>
             <div class="box-footer clearfix">
 
-                <button type="reset" class="btn btn-warning pull-left margin"><i class="fa fa-times"></i> Reset</button>
-                <a class="btn btn-warning margin" href="{{ path('blog_admin_post') }}">Retour à la liste</a>
+                <button type="reset" class="btn btn-warning pull-left margin"><i class="fa fa-times"></i> {{ 'blog.article.button.reset' | trans }}</button>
+                <a class="btn btn-warning margin" href="{{ path('blog_admin_post') }}">{{ 'blog.article.button.back' | trans }}</a>
 
-                <button type="submit" class="btn btn-primary pull-right margin"><i class="fa fa-check-square"></i> Créer</button>
+                <button type="submit" class="btn btn-primary pull-right margin"><i class="fa fa-check-square"></i> {{ 'blog.article.button.create' | trans }}</button>
             </div>
             {{ form_end(form) }}
         </div>
