--- a/src/Numerogeek/BlogBundle/Resources/views/Admin/Category/edit.html.twig
+++ b/src/Numerogeek/BlogBundle/Resources/views/Admin/Category/edit.html.twig
@@ -7,7 +7,7 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('category') }}">
+        <a href="{{ path('blog_admin_category') }}">
             {{ "blog.category.button.back"|trans }}
         </a>
     </li>
