--- a/app/Resources/AvanzuAdminThemeBundle/views/layout/base-layout.html.twig
+++ b/app/Resources/AvanzuAdminThemeBundle/views/layout/base-layout.html.twig
@@ -100,7 +100,7 @@
                         <div class="container">
                             <div class="alert alert-{{ type }} alert-dismissible margin" role="alert">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                {{ message|raw|trans }}
+                                {{ message  |trans |raw }}
                             </div>
                         </div>
                     {% endfor %}
