set up the contact bundle

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -42,6 +42,23 @@
                 </p>
             </div>
 
+            <div>
+                <h2>What's in the boilerplate ?</h2>
+                <ul>
+                    <li>
+                        <a href="{{ path('mremi_contact_form') }}">
+                            A contact form !
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('blog_index') }}">
+                            A blog bundle !
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
         </div>
     </div>
 {% endblock %}
