--- a/src/Numerogeek/BlogBundle/Resources/views/Admin/Post/edit.html.twig
+++ b/src/Numerogeek/BlogBundle/Resources/views/Admin/Post/edit.html.twig
@@ -31,6 +31,20 @@
                 {{ form_end(form) }}
             </div>
 
+
+            <div class="box box-primary">
+                <div class="box-header">
+                    {{ 'blog.article.title.delete' |trans }}
+                </div>
+
+                <div class="box-footer clearfix">
+                    {{ form_start(delete_form) }}
+                        {{ form_rest(delete_form) }}
+                    {{ form_end(delete_form) }}
+                </div>
+            </div>
+
+
         </div>
     </div>
 
